TBC - 0.48.0
- [CHANGED] - Omnirig Drivers: Removed QT AXContainers - pure Windows API code
- [CHANGED] - Enabled Chekbox in Alerts Table (issue #867)
- [CHANGED] - Serial Port Completer contains Horizontal ScrollBar

2025/12/19 - 0.47.1
- [CHANGED] - DXC - VE7CC-type Cluster is correctly detected (PR #851 @kyleboyle)
- [CHANGED] - Chat - Changed ON4KST URL (issue #857)
- Fixed missing clear button for Search Callsign (issue #753)
- Fixed Updated QSOs are not sent to wavelog (issue #847)
- Fixed Fixed Omnirig(v2) getFreq, getVFO, setFreq (issue #853)
- Fixed ADI Header does not follow ADIF Spec (issue #859)
- Fixed OmniRig settings are not saved (issue #862)

2025/12/06 - 0.47.0
- [NEW] - Adds theme options - native, light, dark (PR #718 @kyleboyle)
- [NEW] - Implemented ADIF 3.1.6
- [NEW] - ADIF 3.1.6 - Added new modes FSK and MTONE
- [NEW] - ADIF 3.1.6 - Added new contest IDs
- [NEW] - ADIF 3.1.6 - Added new column EQSL_AG (Import/Export only)
- [NEW] - Statistics, QSODetail contain deleted DXCC Entities (PR #728 @aa5sh @foldynl)
- [NEW] - Settings Hamlib - Added support to define CIV Addr for Icom and Ten-Tec (issue #747)
- [NEW] - Settings Hamlib - Added RTS and DTR control (PR #809 @aa5sh)
- [NEW] - Settings GUI - Added options to switch distance unit
- [NEW] - Added Linux manpage (PR #791 @dawkagaming)
- [NEW] - Added a link to the GitHub release notes under Help-Whats New
- [NEW] - Added workaround for WriteLog - always call callbook lookups (PR #833 @sjwoodr)
- [NEW] - Awards - Added Not-Confirmed filter (PR #836 @aa5sh)
- [NEW] - Rotator Widget - Added buttons to change button profiles
- [CHANGED] - Settings - Added network loop detection for WSJTX Forward (issue #815 @aa5sh @foldynl)
- [CHANGED] - Rotator - Rotator timeout is set to 5s (PR #823 @aa5sh)
- [CHANGED] - Double Spin Boxes - the decimal separator is forced to be a period
- [DELETED] - WSJTX Widget - Removed Freq and Mode
- Fixed QSODetail - Anti-meridian bug on map (issue #786)