@@ -1,11 +1,45 @@
 #include "ui/component/FreqQSpinBox.h"
 #include <QKeyEvent>
+#include <QLineEdit>
 #include "data/BandPlan.h"
 
 FreqQSpinBox::FreqQSpinBox(QWidget *parent) :
-    BaseDoubleSpinBox(parent)
+    BaseDoubleSpinBox(parent),
+    selectionModeEnabled(true)
 {
     loadBands();
+
+    debounceTimer.setSingleShot(true);
+    connect(&debounceTimer, &QTimer::timeout,
+            this, &FreqQSpinBox::flushDebounced);
+    connect(this, QOverload<double>::of(&QDoubleSpinBox::valueChanged),
+            this, &FreqQSpinBox::onValueChangedImmediate);
+}
+
+void FreqQSpinBox::setSelectionModeEnabled(bool enabled)
+{
+    selectionModeEnabled = enabled;
+
+    if ( !enabled )
+        if (auto le = lineEdit()) le->deselect();
+}
+
+void FreqQSpinBox::setDebounceEnabled(bool enabled)
+{
+    if ( debounceEnabled == enabled ) return;
+
+    debounceEnabled = enabled;
+
+    if ( !debounceEnabled )
+    {
+        if ( debounceTimer.isActive() )debounceTimer.stop();
+        flushDebounced();
+    }
+}
+
+void FreqQSpinBox::setDebounceIntervalMs(int ms)
+{
+    debounceMs = qMax(0, ms);
 }
 
 void FreqQSpinBox::loadBands()
@@ -45,6 +79,41 @@ void FreqQSpinBox::wheelEvent(QWheelEvent *event)
     BaseDoubleSpinBox::wheelEvent(event);
 }
 
+void FreqQSpinBox::stepBy(int steps)
+{
+    BaseDoubleSpinBox::stepBy(steps);
+
+    if ( !selectionModeEnabled )
+        if (auto le = lineEdit()) le->deselect();
+}
+
+void FreqQSpinBox::onValueChangedImmediate(double v)
+{
+    if ( !debounceEnabled )
+    {
+        emit debouncedValueChanged(v);
+        return;
+    }
+
+    pendingValue = v;
+    hasPending = true;
+
+    if ( debounceMs == 0 )
+    {
+        flushDebounced();
+        return;
+    }
+    debounceTimer.start(debounceMs);
+}
+
+void FreqQSpinBox::flushDebounced()
+{
+    if ( !hasPending ) return;
+
+    hasPending = false;
+    emit debouncedValueChanged(pendingValue);
+}
+
 void FreqQSpinBox::increaseByBand()
 {
     if ( enabledBands.size() == 0 )
@@ -55,7 +124,7 @@ void FreqQSpinBox::increaseByBand()
         if ( band.start > value() )
         {
             setValue(band.start);
-            selectAll();
+            maybeSelectAll();
             return;
         }
     }
@@ -75,5 +144,12 @@ void FreqQSpinBox::decreaseByBand()
     }
 
     setValue(result);
+    maybeSelectAll();
+}
+
+void FreqQSpinBox::maybeSelectAll()
+{
+    if ( !selectionModeEnabled ) return;
+
     selectAll();
 }
